--- a/index.html
+++ b/index.html
@@ -40,5 +40,38 @@
         title="Поступление и обучение в Университете Иннополис"></iframe>
     </div>
   </div>
+  <div class="container2">
+    <div class="container2__first">
+      <div class="container2__column">
+        <h1 class="heading__second">do you know we can provide for you ?</h1>
+        <p class="container2__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
+          sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet,
+          consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
+        <button class="container2__button" type="button">Learn More</button>
+      </div>
+      <div class="container2__common">
+        <img src="./images/kol.svg" alt="иконка" class="img">
+        <p class="container2__third">Management</p>
+        <p class="container2__third__text">Lorem ipsum dolor sitea amet,
+          zixf conseit adipi cing elit,
+          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+        <img src="./images/logo.svg" alt="иконка" class="img">
+        <p class="container2__third">Logo/Branding</p>
+        <p class="container2__third__text">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+          seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
+      </div>
+      <div class="container2__common">
+        <img src="./images/kar.svg" alt="иконка" class="img">
+        <p class="container2__third">UI /UX Design</p>
+        <p class="container2__third__text">Lorem ipsum dolor sitea amet,
+          zixf conseit adipi cing elit,
+          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
+        <img src="./images/trans.png" alt="иконка" class="img">
+        <p class="container2__third">Animation</p>
+        <p class="container2__third__text">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
+      </div>
+    </div>
+  </div>
 
 </html>
