дополнение работы и исправление ошибок

--- a/index.html
+++ b/index.html
@@ -11,67 +11,74 @@
 </head>
 
 <body class="root">
-  <div class="page">
+  <nav class="page">
     <header class="header">
       <ul class="header__list">
         <li class="list__text">
-          <a href="#" class="link__text">HOME</a>
+          <a href="#" class="link__text">home</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">PORTFOLIO</a>
+          <a href="#" class="link__text">portfolio</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">ABOUT US</a>
+          <a href="#" class="link__text">about us</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">CONTACT</a>
+          <a href="#" class="link__text">contact</a>
         </li>
       </ul>
     </header>
-    <div class="container">
-      <main class="container1__main__text">
-        <h1 class="heading">OUR STRONG ORGANAISATION</h1>
+
+    <div class="content">
+      <section class="content__main__text">
+        <h2 class="heading">OUR STRONG ORGANAISATION</h2>
         <p class="main__text">Lorem ipsum dolor sit amet,
           consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
           sed do eiusmod tempor incididunt.</p>
-        <button class="container__button" type="button">Contact Us</button>
-      </main>
-      <iframe class="container__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
+        <button class="content__button" type="button">Contact Us</button>
+      </section>
+      <iframe class="content__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
         title="Поступление и обучение в Университете Иннополис"></iframe>
     </div>
-  </div>
-  <div class="container2">
-    <div class="container2__first">
-      <div class="container2__column">
-        <h1 class="heading__second">do you know we can provide for you ?</h1>
-        <p class="container2__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
+  </nav>
+  <section class="second">
+    <div class="second__content">
+      <div class="second__column">
+        <h2 class="second__heading">do you know we can provide for you ?</h2>
+        <p class="second__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
           sed do eiusmod tempor incididunt ut labore et.Lorem ni ipsum dolor sit amet,
           consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
-        <button class="container2__button" type="button">Learn More</button>
+        <button class="second__button" type="button">Learn More</button>
       </div>
-      <div class="container2__common">
-        <img src="./images/kol.svg" alt="иконка" class="img">
-        <p class="container2__third">Management</p>
-        <p class="container2__third__text">Lorem ipsum dolor sitea amet,
+      <div class="second__common">
+        <img src="./images/kol.svg" alt="менеджемент" class="img">
+        <h2 class="second__heading__text__text">Management</h2>
+        <p class="second__text__communis">Lorem ipsum dolor sitea amet,
           zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
-        <img src="./images/logo.svg" alt="иконка" class="img">
-        <p class="container2__third">Logo/Branding</p>
-        <p class="container2__third__text">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+        <img src="./images/logo.svg" alt="лого брендинга" class="img">
+        <h2 class="second__heading__text">Logo/Branding</h2>
+        <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
       </div>
-      <div class="container2__common">
-        <img src="./images/kar.svg" alt="иконка" class="img">
-        <p class="container2__third">UI /UX Design</p>
-        <p class="container2__third__text">Lorem ipsum dolor sitea amet,
+      <div class="second__common">
+        <img src="./images/kar.svg" alt="дизайн пользователя" class="img">
+        <h2 class="second__heading__text">UI /UX Design</h2>
+        <p class="second__text__communis">Lorem ipsum dolor sitea amet,
           zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
-        <img src="./images/trans.png" alt="иконка" class="img">
-        <p class="container2__third">Animation</p>
-        <p class="container2__third__text">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+        <img src="./images/trans.png" alt="анимация" class="img">
+        <h2 class="second__heading__text">Animation</h2>
+        <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
       </div>
     </div>
-  </div>
+  </section>
+  <section class="third__section">
+    <h2 class="third__heading">feature products</h2>
+    <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut
+      labore et.</p>
+
+  </section>
 
 </html>
