--- a/index.html
+++ b/index.html
@@ -77,7 +77,49 @@
     <h2 class="third__heading">feature products</h2>
     <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut
       labore et.</p>
-
+    <ul class="third__list">
+      <li class="third__text__list">
+        <a href="#" class="third__link">all</a>
+      </li>
+      <li class="third__text__list">
+        <a href="#" class="third__link">print template</a>
+      </li>
+      <li class="third__text__list">
+        <a href="#" class="third__link">web template</a>
+      </li>
+      <li class="third__text__list">
+        <a href="#" class="third__link">user interface</a>
+      </li>
+      <li class="third__text__list">
+        <a href="#" class="third__link">mock-up</a>
+      </li>
+    </ul>
+    <div class="third__section__product">
+      <div class="product">
+        <img src="./images/1.jpg" alt="пуэр" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/2.jpg" alt="пуэр" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/3.jpg" alt="да хун пао" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/4.jpg" alt="да хун пао" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/5.jpg" alt="тегуаньинь" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/6.jpg" alt="тегуаньинь" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/7.jpg" alt="тегуаньинь" class="image">
+      </div>
+      <div class="product">
+        <img src="./images/8.jpg" alt="белый чай " class="image">
+      </div>
+    </div>
   </section>
 
 </html>
