--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <h2 class="third__heading">feature products</h2>
     <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut
       labore et.</p>
+    <div class="line"></div>
     <ul class="third__list">
       <li class="third__text__list">
         <a href="#" class="third__link">all</a>
