--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         </li>
       </ul>
     </header>
-    <div class="content">
-      <section class="content__main__text">
+    <section class="content">
+      <div class="content__main__text">
         <h2 class="heading">OUR STRONG ORGANAISATION</h2>
         <p class="main__text">Lorem ipsum dolor sit amet,
           consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
           sed do eiusmod tempor incididunt.</p>
         <button class="content__button" type="button">Contact Us</button>
-      </section>
+      </div>
       <iframe class="content__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
         title="Поступление и обучение в Университете Иннополис"></iframe>
-    </div>
+    </section>
   </nav>
   <section class="second">
     <div class="second__content">
