--- a/index.html
+++ b/index.html
@@ -121,48 +121,47 @@
     </div>
   </section>
   <section class="section__four">
-    <div class="four__container">
-      <div class="four__left">
-        <h2 class="four__heading">Meet our team</h2>
-        <p class="four__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
-          sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
-        <div class="four__line"></div>
-      </div>
-      <div class="four__box">
-        <img src="./images/nac.jpg" alt="начальник" class="four__photo__chief">
-        <div class="four__right">
-          <div class="four__info__right">
-            <span class="four__chief__name">mark waugh</span>
-            <p class="four__text__right">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
-              sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
-            <div class="four__links">
-              <a href="#" class="four__link">Facebook</a>
-              <a href="#" class="four__link">Dribble</a>
-              <a href="#" class="four__link">Behance</a>
-              <a href="#" class="four__link">Twiter</a>
-            </div>
+    <div class="four__left">
+      <h2 class="four__heading">Meet our team</h2>
+      <p class="four__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
+        sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+      <div class="four__line"></div>
+    </div>
+    <div class="four__box">
+      <img src="./images/nac.jpg" alt="начальник" class="four__photo__chief">
+      <div class="four__right">
+        <div class="four__info__right">
+          <span class="four__chief__name">mark waugh</span>
+          <p class="four__text__right">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
+            sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
+          <div class="four__links">
+            <a href="#" class="four__link">Facebook</a>
+            <a href="#" class="four__link">Dribble</a>
+            <a href="#" class="four__link">Behance</a>
+            <a href="#" class="four__link">Twiter</a>
           </div>
-          <section class="four__photos">
-            <div class="four__photo">
-              <h3 class="four__worker__name">Its Olga</h3>
-              <img src="./images/с1.webp" alt="сотрудница" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
-              <h3 class="four__worker__name">Vikol Alexander</h3>
-              <img src="./images/с2.webp" alt="сотрудник" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
-              <h3 class="four__worker__name">Ivanov Anton</h3>
-              <img src="./images/с3.webp" alt="сотрудник" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
-              <h3 class="four__worker__name">Borisov Maksim</h3>
-              <img src="./images/с4.webp" alt="сотрудник" class="four__photo__worker">
-            </div>
-          </section>
         </div>
+        <section class="four__photos">
+          <div class="four__photo">
+            <h3 class="four__worker__name">Its Olga</h3>
+            <img src="./images/c1.jpg" alt="сотрудница" class="four__photo__worker">
+          </div>
+          <div class="four__photo">
+            <h3 class="four__worker__name">Vikol Alexander</h3>
+            <img src="./images/c2.webp" alt="сотрудник" class="four__photo__worker">
+          </div>
+          <div class="four__photo">
+            <h3 class="four__worker__name">Ivanov Anton</h3>
+            <img src="./images/c3.jpg" alt="сотрудник" class="four__photo__worker">
+          </div>
+          <div class="four__photo">
+            <h3 class="four__worker__name">Borisov Maksim</h3>
+            <img src="./images/c4.jpg" alt="сотрудник" class="four__photo__worker">
+          </div>
+        </section>
       </div>
     </div>
+
   </section>
 
 </body>
