--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         </div>
         <section class="four__photos">
           <div class="four__photo">
-            <h3 class="four__worker__name">Its Olga</h3>
-            <img src="./images/c1.jpg" alt="сотрудница" class="four__photo__worker">
+            <h3 class="four__worker__name">Stepanov Ivan</h3>
+            <img src="./images/c1.jpg" alt="сотрудник" class="four__photo__worker">
           </div>
           <div class="four__photo">
             <h3 class="four__worker__name">Vikol Alexander</h3>
