--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       </div>
     </div>
   </section>
+
   <section class="section__four">
     <div class="four__left">
       <h2 class="four__heading">Meet our team</h2>
@@ -144,19 +145,19 @@
         <section class="four__photos">
           <div class="four__photo">
             <h3 class="four__worker__name">Stepanov Ivan</h3>
-            <img src="./images/c1.jpg" alt="сотрудник" class="four__photo__worker">
+            <img src="./images/c1.jpg" alt="employee" class="four__photo__worker">
           </div>
           <div class="four__photo">
             <h3 class="four__worker__name">Vikol Alexander</h3>
-            <img src="./images/c2.webp" alt="сотрудник" class="four__photo__worker">
+            <img src="./images/c2.webp" alt="employee" class="four__photo__worker">
           </div>
           <div class="four__photo">
             <h3 class="four__worker__name">Ivanov Anton</h3>
-            <img src="./images/c3.jpg" alt="сотрудник" class="four__photo__worker">
+            <img src="./images/c3.jpg" alt="employee" class="four__photo__worker">
           </div>
           <div class="four__photo">
             <h3 class="four__worker__name">Borisov Maksim</h3>
-            <img src="./images/c4.jpg" alt="сотрудник" class="four__photo__worker">
+            <img src="./images/c4.jpg" alt="employee" class="four__photo__worker">
           </div>
         </section>
       </div>
