--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
       </div>
     </div>
   </section>
+  <section class="five">
+    <div class="five__box__text">
+      <h2 class="five__heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
+      <p class="five__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
+    </div>
+    <form class="five__form">
+      <input class="five__input" type="email" name="email" placeholder="Email Address..." required>
+      <button class="five__button" type="submit">subscribe</button>
+    </form>
+  </section>
 
 </body>
 
