--- a/index.html
+++ b/index.html
@@ -11,33 +11,35 @@
 </head>
 
 <body class="root">
-  <header class="header">
-    <ul class="header__list">
-      <li class="list__text">
-        <a href="#" class="link__text">home</a>
-      </li>
-      <li class="list__text">
-        <a href="#" class="link__text">portfolio</a>
-      </li>
-      <li class="list__text">
-        <a href="#" class="link__text">about us</a>
-      </li>
-      <li class="list__text">
-        <a href="#" class="link__text">contact</a>
-      </li>
-    </ul>
-  </header>
-  <section class="content">
-    <div class="content__main__text">
-      <h1 class="heading">OUR STRONG ORGANAISATION</h1>
-      <p class="main__text">Lorem ipsum dolor sit amet,
-        consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
-        sed do eiusmod tempor incididunt.</p>
-      <button class="content__button" type="button">Contact Us</button>
-    </div>
-    <iframe class="content__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
-      title="Поступление и обучение в Университете Иннополис"></iframe>
-  </section>
+  <div class="home__content">
+    <header class="header">
+      <ul class="header__list">
+        <li class="list__text">
+          <a href="#" class="link__text">home</a>
+        </li>
+        <li class="list__text">
+          <a href="#" class="link__text">portfolio</a>
+        </li>
+        <li class="list__text">
+          <a href="#" class="link__text">about us</a>
+        </li>
+        <li class="list__text">
+          <a href="#" class="link__text">contact</a>
+        </li>
+      </ul>
+    </header>
+    <section class="content">
+      <div class="content__main__text">
+        <h1 class="heading">OUR STRONG ORGANAISATION</h1>
+        <p class="main__text">Lorem ipsum dolor sit amet,
+          consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
+          sed do eiusmod tempor incididunt.</p>
+        <button class="content__button" type="button">Contact Us</button>
+      </div>
+      <iframe class="content__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
+        title="Поступление и обучение в Университете Иннополис"></iframe>
+    </section>
+  </div>
   <section class="second">
     <div class="second__content">
       <div class="second__column">
@@ -93,32 +95,32 @@
         <a href="#" class="third__link">mock-up</a>
       </li>
     </ul>
-    <div class="third__section__product">
-      <div class="product">
+    <ul class="third__section__product">
+      <li class="product">
         <img src="./images/1.jpg" alt=" шу пуэр" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/2.jpg" alt="пуэр" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/3.jpg" alt="да хун пао светлый" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/4.jpg" alt="да хун пао" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/5.jpg" alt="тегуаньинь тяжёлый" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/6.jpg" alt="тегуаньинь" class="image">
-      </div>
-      <div class=" product">
+      </li>
+      <li class=" product">
         <img src="./images/7.jpg" alt="тегуаньинь зелёный" class="image">
-      </div>
-      <div class="product">
+      </li>
+      <li class="product">
         <img src="./images/8.jpg" alt="белый чай " class="image">
-      </div>
-    </div>
+      </li>
+    </ul>
   </section>
   <section class="section__four">
     <div class="four__common">
@@ -135,31 +137,39 @@
             <span class="four__chief__name">mark waugh</span>
             <p class="four__text__right">Lorem ipsum dolor sit amet, consectetur adipis cing elit,
               sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
-            <div class="four__links">
-              <a href="#" class="four__link">Facebook</a>
-              <a href="#" class="four__link">Dribble</a>
-              <a href="#" class="four__link">Behance</a>
-              <a href="#" class="four__link">Twiter</a>
-            </div>
+            <ul class="four__list">
+              <li>
+                <a href="#" class="four__link">Facebook</a>
+              </li>
+              <li>
+                <a href="#" class="four__link">Dribble</a>
+              </li>
+              <li>
+                <a href="#" class="four__link">Behance</a>
+              </li>
+              <li>
+                <a href="#" class="four__link">Twiter</a>
+              </li>
+            </ul>
           </div>
-          <section class="four__photos">
-            <div class="four__photo">
+          <ul class="four__photos">
+            <li class="four__photo">
               <h3 class="four__worker__name">Stepanov Ivan</h3>
               <img src="./images/c1.jpg" alt="employee" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
+            </li>
+            <li class="four__photo">
               <h3 class="four__worker__name">Vikol Alexander</h3>
               <img src="./images/c2.webp" alt="employee" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
+            </li>
+            <li class="four__photo">
               <h3 class="four__worker__name">Ivanov Anton</h3>
               <img src="./images/c3.jpg" alt="employee" class="four__photo__worker">
-            </div>
-            <div class="four__photo">
+            </li>
+            <li class="four__photo">
               <h3 class="four__worker__name">Borisov Maksim</h3>
               <img src="./images/c4.jpg" alt="employee" class="four__photo__worker">
-            </div>
-          </section>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
