--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="root">
-  <div class="home__content">
+  <div class="home__one">
     <header class="header">
       <ul class="header__list">
         <li class="list__text">
@@ -28,15 +28,15 @@
         </li>
       </ul>
     </header>
-    <section class="content">
-      <div class="content__main__text">
+    <section class="one">
+      <div class="one__main__text">
         <h1 class="heading">OUR STRONG ORGANAISATION</h1>
         <p class="main__text">Lorem ipsum dolor sit amet,
           consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
           sed do eiusmod tempor incididunt.</p>
-        <button class="content__button" type="button">Contact Us</button>
+        <button class="one__button" type="button">Contact Us</button>
       </div>
-      <iframe class="content__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
+      <iframe class="one__video" src="https://www.youtube.com/embed/T7IwRse9BRM"
         title="Поступление и обучение в Университете Иннополис"></iframe>
     </section>
   </div>
