адаптирование 1 секции и исправление ошибок

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -50,23 +50,23 @@
         <button class="second__button" type="button">Learn More</button>
       </div>
       <div class="second__common">
-        <img src="./images/kol.svg" alt="менеджемент" class="img">
+        <img src="./images/kol.svg" alt="Management" class="img">
         <h2 class="second__heading__text">Management</h2>
         <p class="second__text__communis">Lorem ipsum dolor sitea amet,
           zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
-        <img src="./images/logo.svg" alt="лого брендинга" class="img">
+        <img src="./images/logo.svg" alt="Logo/Branding" class="img">
         <h2 class="second__heading__text">Logo/Branding</h2>
         <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
       </div>
       <div class="second__common">
-        <img src="./images/kar.svg" alt="дизайн пользователя" class="img">
+        <img src="./images/kar.svg" alt="user design" class="img">
         <h2 class="second__heading__text">UI /UX Design</h2>
         <p class="second__text__communis">Lorem ipsum dolor sitea amet,
           zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
-        <img src="./images/trans.png" alt="анимация" class="img">
+        <img src="./images/trans.png" alt="Animation" class="img">
         <h2 class="second__heading__text">Animation</h2>
         <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
           seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
@@ -75,7 +75,8 @@
   </section>
   <section class="third__section">
     <h2 class="third__heading">feature products</h2>
-    <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt ut
+    <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt
+      ut
       labore et.</p>
     <div class="line"></div>
     <ul class="third__list">
@@ -97,28 +98,28 @@
     </ul>
     <ul class="third__section__product">
       <li class="product">
-        <img src="./images/1.jpg" alt=" шу пуэр" class="image">
+        <img src="./images/1.jpg" alt="shu puer" class="image">
       </li>
       <li class="product">
-        <img src="./images/2.jpg" alt="пуэр" class="image">
+        <img src="./images/2.jpg" alt="puer" class="image">
       </li>
       <li class="product">
-        <img src="./images/3.jpg" alt="да хун пао светлый" class="image">
+        <img src="./images/3.jpg" alt="da hong pao light" class="image">
       </li>
       <li class="product">
-        <img src="./images/4.jpg" alt="да хун пао" class="image">
+        <img src="./images/4.jpg" alt="da hong pao" class="image">
       </li>
       <li class="product">
-        <img src="./images/5.jpg" alt="тегуаньинь тяжёлый" class="image">
+        <img src="./images/5.jpg" alt="teguanyin heavy" class="image">
       </li>
       <li class="product">
-        <img src="./images/6.jpg" alt="тегуаньинь" class="image">
+        <img src="./images/6.jpg" alt="teguanyin" class="image">
       </li>
       <li class=" product">
-        <img src="./images/7.jpg" alt="тегуаньинь зелёный" class="image">
+        <img src="./images/7.jpg" alt="teguanyin green" class="image">
       </li>
       <li class="product">
-        <img src="./images/8.jpg" alt="белый чай " class="image">
+        <img src="./images/8.jpg" alt="white tea" class="image">
       </li>
     </ul>
   </section>
@@ -131,7 +132,7 @@
         <div class="four__line"></div>
       </div>
       <div class="four__box">
-        <img src="./images/nac.jpg" alt="начальник" class="four__photo__chief">
+        <img src="./images/nac.jpg" alt="chief" class="four__photo__chief">
         <div class="four__right">
           <div class="four__info__right">
             <span class="four__chief__name">mark waugh</span>
