--- a/index.html
+++ b/index.html
@@ -185,6 +185,30 @@
       <button class="five__button" type="submit">subscribe</button>
     </form>
   </section>
+  <section class="six">
+    <div class="six__box__left">
+      <h2 class="six__heading">get in touch</h2>
+      <p class="six__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt
+        ut
+        labore et.ur adipis cing elit,
+        sed do eiusmod tempor incididunt ut labore et. ur adipis cing elit, sed do eiusmod tempor incididunt ut labore
+        et.
+      </p>
+      <div class="six__line"></div>
+      <form class="six__form">
+        <input class="six__input" type="text" name="name class=six__input__name" placeholder="Name" required>
+        <input class="six__input" type="text" name="mail" placeholder="Your Mail" required>
+        <textarea class="six__textarea" name="messaqe" cols="38" rows="5" placeholder="Type your message"></textarea>
+        <button class="six__button" type="submit">Send message</button>
+      </form>
+    </div>
+    <div class="six__box__right">
+      <h2 class="six__right__heading">contact info</h2>
+      <p class="six__right__text">Jalalabad 24 / A, Ambaarkhana, Sylhet, Bangladesh</p>
+      <p class="right__text">redwan@deviserweb.com</p>
+      <p class="six__number">(+88) 017 617 46373</p>
+    </div>
+  </section>
 </body>
 
 </html>
