--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
               sed dooing eiusmod tempor incididut labore Ui / Ux , print template.</p>
             <ul class="four__list">
               <li>
-                <a href="#" class="four__link">Facebook</a>
+                <a href="https://web.telegram.org/k/#-1819555005" target="_blank" class="four__link">Telegram</a>
               </li>
               <li>
-                <a href="#" class="four__link">Dribble</a>
+                <a href="https://web.whatsapp.com/" target="_blank" class="four__link">WhatsApp</a>
               </li>
               <li>
-                <a href="#" class="four__link">Behance</a>
+                <a href="https://vk.com/id204482343" target="_blank" class="four__link">ВКОНТАКТЕ</a>
               </li>
               <li>
-                <a href="#" class="four__link">Twiter</a>
+                <a href="https://ok.ru/messages" target="_blank" class="four__link">одноклассники</a>
               </li>
             </ul>
           </div>
