--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <a href="https://web.whatsapp.com/" target="_blank" class="four__link">WhatsApp</a>
               </li>
               <li>
-                <a href="https://vk.com/id204482343" target="_blank" class="four__link">ВКОНТАКТЕ</a>
+                <a href="https://vk.com/id204482343" target="_blank" class="four__link">Vkontakte</a>
               </li>
               <li>
-                <a href="https://ok.ru/messages" target="_blank" class="four__link">одноклассники</a>
+                <a href="https://ok.ru/messages" target="_blank" class="four__link">Odnoklassniki</a>
               </li>
             </ul>
           </div>
