--- a/index.html
+++ b/index.html
@@ -209,6 +209,28 @@
       <p class="six__number">(+88) 017 617 46373</p>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="footer__communis">
+      <div class="footer__box">
+        <p class="footer__text">© Copyright @Junaed 2016, All rights reserved.s</p>
+      </div>
+      <div class="footer__links">
+        <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <img src="./images/телеграмм.svg" alt="лого телеграмм">
+        </a>
+        <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <img src="./images/whatsapp.png" alt="лого whatsapp">
+        </a>
+        <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <img src="./images/vk.png" alt="лого контакта">
+        </a>
+        <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <img src="./images/одноклассники.png" alt="лого ok">
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
