--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
@@ -209,24 +209,31 @@
       <p class="six__number">(+88) 017 617 46373</p>
     </div>
   </section>
-
   <footer class="footer">
     <div class="footer__communis">
       <div class="footer__box">
         <p class="footer__text">© Copyright @Junaed 2016, All rights reserved.s</p>
       </div>
       <ul class="footer__links">
-        <li class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-          <img src="./images/телеграмм.svg" alt="лого телеграмм">
+        <li>
+          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+            <img src="./images/телеграмм.svg" alt="лого телеграмм">
+          </a>
         </li>
-        <li class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-          <img src="./images/whatsapp.png" alt="лого whatsapp">
+        <li>
+          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+            <img src="./images/whatsapp.png" alt="лого whatsapp">
+          </a>
         </li>
-        <li class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-          <img src="./images/vk.png" alt="лого контакта">
+        <li>
+          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+            <img src="./images/vk.png" alt="лого контакта">
+          </a>
         </li>
-        <li class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-          <img src="./images/одноклассники.png" alt="лого ok">
+        <li>
+          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+            <img src="./images/одноклассники.png" alt="лого ok">
+          </a>
         </li>
       </ul>
     </div>
