--- a/index.html
+++ b/index.html
@@ -221,17 +221,17 @@
           </a>
         </li>
         <li>
-          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <a class="footer__link" href="https://web.whatsapp.com/" target="_blank">
             <img src="./images/whatsapp.png" alt="лого whatsapp">
           </a>
         </li>
         <li>
-          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <a class="footer__link" href="https://vk.com/id204482343" target="_blank">
             <img src="./images/vk.png" alt="лого контакта">
           </a>
         </li>
         <li>
-          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <a class="footer__link" href="https://ok.ru/messages" target="_blank">
             <img src="./images/одноклассники.png" alt="лого ok">
           </a>
         </li>
