--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
       <ul class="footer__links">
         <li>
           <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-            <img src="./images/телеграмм.svg" alt="лого телеграмм">
+            <img src="./images/телеграмм.svg" alt="лого телеграмм" class="footer__igp">
           </a>
         </li>
         <li>
           <a class="footer__link" href="https://web.whatsapp.com/" target="_blank">
-            <img src="./images/whatsapp.png" alt="лого whatsapp">
+            <img src="./images/whatsapp.png" alt="лого whatsapp" class="footer__igp">
           </a>
         </li>
         <li>
           <a class="footer__link" href="https://vk.com/id204482343" target="_blank">
-            <img src="./images/vk.png" alt="лого контакта">
+            <img src="./images/vk.png" alt="лого контакта" class="footer__igp">
           </a>
         </li>
         <li>
           <a class="footer__link" href="https://ok.ru/messages" target="_blank">
-            <img src="./images/одноклассники.png" alt="лого ok">
+            <img src="./images/одноклассники.png" alt="лого ok" class="footer__igp">
           </a>
         </li>
       </ul>
