--- a/index.html
+++ b/index.html
@@ -49,27 +49,29 @@
           consectetur adipis cing elit, ed doi eiusmod tempor incididunt ut labore et.</p>
         <button class="second__button" type="button">Learn More</button>
       </div>
-      <div class="second__common">
-        <img src="./images/kol.svg" alt="Management" class="img">
-        <h2 class="second__heading__text">Management</h2>
-        <p class="second__text__communis">Lorem ipsum dolor sitea amet,
-          zixf conseit adipi cing elit,
-          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
-        <img src="./images/logo.svg" alt="Logo/Branding" class="img">
-        <h2 class="second__heading__text">Logo/Branding</h2>
-        <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
-          seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
-      </div>
-      <div class="second__common">
-        <img src="./images/kar.svg" alt="user design" class="img">
-        <h2 class="second__heading__text">UI /UX Design</h2>
-        <p class="second__text__communis">Lorem ipsum dolor sitea amet,
-          zixf conseit adipi cing elit,
-          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
-        <img src="./images/trans.png" alt="Animation" class="img">
-        <h2 class="second__heading__text">Animation</h2>
-        <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
-          seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
+      <div class="second__right">
+        <div class="second__common">
+          <img src="./images/kol.svg" alt="Management" class="img">
+          <h2 class="second__heading__text">Management</h2>
+          <p class="second__text__communis">Lorem ipsum dolor sitea amet,
+            zixf conseit adipi cing elit,
+            seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor</p>
+          <img src="./images/logo.svg" alt="Logo/Branding" class="img">
+          <h2 class="second__heading__text">Logo/Branding</h2>
+          <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+            seddi do eiusmod btdempor in didunt utlae ore etioeew idolor sit amet,</p>
+        </div>
+        <div class="second__common">
+          <img src="./images/kar.svg" alt="user design" class="img">
+          <h2 class="second__heading__text">UI /UX Design</h2>
+          <p class="second__text__communis">Lorem ipsum dolor sitea amet,
+            zixf conseit adipi cing elit,
+            seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor </p>
+          <img src="./images/trans.png" alt="Animation" class="img">
+          <h2 class="second__heading__text">Animation</h2>
+          <p class="second__text__communis">Lorem ipsum dolor sitea amet, zixf conseit adipi cing elit,
+            seddi do eiusmod btdempor in didunt utlae ore etioe.Lorem ipsum new idolor sit amet,</p>
+        </div>
       </div>
     </div>
   </section>
