добавление адаптации 3 секция

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section class="one">
       <div class="one__main__text">
-        <h1 class="heading">OUR STRONG ORGANAISATION</h1>
+        <h1 class="heading">our strong organaisation</h1>
         <p class="main__text">Lorem ipsum dolor sit amet,
           consectetur adipis cing elit, sed do eiusmod tempor incididunt ut labore et. ectetur adig ipis cing elit,
           sed do eiusmod tempor incididunt.</p>
