--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
           <a href="#" class="link__text">contact</a>
         </li>
       </ul>
+      <div class="burger">
+        <div class="burger__line__first"></div>
+        <div class="burger__line__second"></div>
+        <div class="burger__line__thir"></div>
+      </div>
+      <div class="burger__popup">
+        <ul class="header__list__burger">
+          <li class="list__text__burger">
+            <a href="#" class="link__text__burger">home</a>
+          </li>
+          <li class="list__text__burger">
+            <a href="#" class="link__text__burger">portfolio</a>
+          </li>
+          <li class="list__text__burger">
+            <a href="#" class="link__text__burger">about us</a>
+          </li>
+          <li class="list__text__burger">
+            <a href="#" class="link__text__burger">contact</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <section class="one">
       <div class="one__main__text">
@@ -240,6 +261,7 @@
       </ul>
     </div>
   </footer>
+  <script defer src="./index.js"></script>
 </body>
 
 </html>
