--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
     </div>
   </section>
-  <!-- <section class="five">
+  <section class="five">
     <div class="five__box__text">
       <h2 class="five__heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
       <p class="five__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
@@ -261,7 +261,7 @@
       </ul>
 
     </div>
-  </footer>-->
+  </footer>
   <script defer src="./index.js"></script>
 </body>
 
