пробная вставка якорей адаптация ещё одной секции и доделал попап

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 
 <body class="root">
   <div class="home__one">
-    <header class="header">
+    <header class="header" id="home">
       <ul class="header__list">
         <li class="list__text">
-          <a href="#" class="link__text">home</a>
+          <a href="#home" class="link__text">home</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">portfolio</a>
+          <a href="#portfolio" class="link__text">portfolio</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">about us</a>
+          <a href="#about us" class="link__text">about us</a>
         </li>
         <li class="list__text">
-          <a href="#" class="link__text">contact</a>
+          <a href="#contact" class="link__text">contact</a>
         </li>
       </ul>
       <div class="burger">
@@ -35,16 +35,16 @@
       <div class="burger__popup">
         <ul class="header__list__burger">
           <li class="list__text__burger">
-            <a href="#" class="link__text__burger">home</a>
+            <a href="#home" class="link__text__burger">home</a>
           </li>
           <li class="list__text__burger">
-            <a href="#" class="link__text__burger">portfolio</a>
+            <a href="#portfolio" class="link__text__burger">portfolio</a>
           </li>
           <li class="list__text__burger">
-            <a href="#" class="link__text__burger">about us</a>
+            <a href="#about us" class="link__text__burger">about us</a>
           </li>
           <li class="list__text__burger">
-            <a href="#" class="link__text__burger">contact</a>
+            <a href="#contact" class="link__text__burger">contact</a>
           </li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
         title="Поступление и обучение в Университете Иннополис"></iframe>
     </section>
   </div>
-  <section class="second">
+  <section class="second" id="portfolio">
     <div class="second__content">
       <div class="second__column">
         <h2 class="second__heading">do you know we can provide for you ?</h2>
@@ -146,7 +146,7 @@
       </li>
     </ul>
   </section>
-  <section class="section__four">
+  <section class="section__four" id="about us">
     <div class="four__common">
       <div class="four__left">
         <h2 class="four__heading">Meet our team</h2>
@@ -198,7 +198,7 @@
       </div>
     </div>
   </section>
-  <section class="five">
+  <section class="five" id="contact">
     <div class="five__box__text">
       <h2 class="five__heading">Design tips, tricks, and freebies. Delivered weekly.</h2>
       <p class="five__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.</p>
@@ -259,7 +259,6 @@
           </a>
         </li>
       </ul>
-
     </div>
   </footer>
   <script defer src="./index.js"></script>
