--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="./styles/index.css">
 </head>
 
-<body class="root">
+<body class="root" id="home">
   <div class="home__one">
-    <header class="header" id="home">
+    <header class="header">
       <ul class="header__list">
         <li class="list__text">
           <a href="#home" class="link__text">home</a>
@@ -21,7 +21,7 @@
           <a href="#portfolio" class="link__text">portfolio</a>
         </li>
         <li class="list__text">
-          <a href="#about us" class="link__text">about us</a>
+          <a href="#aboutUs" class="link__text">about us</a>
         </li>
         <li class="list__text">
           <a href="#contact" class="link__text">contact</a>
@@ -41,7 +41,7 @@
             <a href="#portfolio" class="link__text__burger">portfolio</a>
           </li>
           <li class="list__text__burger">
-            <a href="#about us" class="link__text__burger">about us</a>
+            <a href="#aboutUs" class="link__text__burger">about us</a>
           </li>
           <li class="list__text__burger">
             <a href="#contact" class="link__text__burger">contact</a>
@@ -99,8 +99,7 @@
   <section class="third__section">
     <h2 class="third__heading">feature products</h2>
     <p class="third__text">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor incididunt
-      ut
-      labore et.</p>
+      ut labore et.</p>
     <div class="line"></div>
     <ul class="third__list">
       <li class="third__text__list">
@@ -146,7 +145,7 @@
       </li>
     </ul>
   </section>
-  <section class="section__four" id="about us">
+  <section class="section__four" id="aboutUs">
     <div class="four__common">
       <div class="four__left">
         <h2 class="four__heading">Meet our team</h2>
@@ -183,7 +182,7 @@
             </li>
             <li class="four__photo">
               <h3 class="four__worker__name">Vikol Alexander</h3>
-              <img src="./images/c2.webp" alt="employee" class="four__photo__worker">
+              <img src="./images/c2.jpeg" alt="employee" class="four__photo__worker">
             </li>
             <li class="four__photo">
               <h3 class="four__worker__name">Ivanov Anton</h3>
@@ -233,33 +232,29 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="footer__communis">
-      <div class="footer__box">
-        <p class="footer__text">© Copyright @Junaed 2016, All rights reserved.s</p>
-      </div>
-      <ul class="footer__links">
-        <li>
-          <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
-            <img src="./images/телеграмм.svg" alt="лого телеграмм" class="footer__igp">
-          </a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://web.whatsapp.com/" target="_blank">
-            <img src="./images/whatsapp.png" alt="лого whatsapp" class="footer__igp">
-          </a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://vk.com/id204482343" target="_blank">
-            <img src="./images/vk.png" alt="лого контакта" class="footer__igp">
-          </a>
-        </li>
-        <li>
-          <a class="footer__link" href="https://ok.ru/messages" target="_blank">
-            <img src="./images/одноклассники.png" alt="лого ok" class="footer__igp">
-          </a>
-        </li>
-      </ul>
-    </div>
+    <p class="footer__text">© Copyright @Junaed 2016, All rights reserved.s</p>
+    <ul class="footer__links">
+      <li>
+        <a class="footer__link" href="https://web.telegram.org/k/#-1819555005" target="_blank">
+          <img src="./images/телеграмм.svg" alt="лого телеграмм" class="footer__igp">
+        </a>
+      </li>
+      <li>
+        <a class="footer__link" href="https://web.whatsapp.com/" target="_blank">
+          <img src="./images/whatsapp.png" alt="лого whatsapp" class="footer__igp">
+        </a>
+      </li>
+      <li>
+        <a class="footer__link" href="https://vk.com/id204482343" target="_blank">
+          <img src="./images/vk.png" alt="лого контакта" class="footer__igp">
+        </a>
+      </li>
+      <li>
+        <a class="footer__link" href="https://ok.ru/messages" target="_blank">
+          <img src="./images/одноклассники.png" alt="лого ok" class="footer__igp">
+        </a>
+      </li>
+    </ul>
   </footer>
   <script defer src="./index.js"></script>
 </body>
